cluster/apps/media/testcloud/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: testcloud
  namespace: media
subsets:
- addresses:
  - ip: 192.168.100.228
  ports:
  - port: 8080
