cluster/apps/media/testcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testcloud
  namespace: media
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
